# Proyectos-Universidad

./: LICENSE  README.md
Aprendizaje Automático/p1/: N1_EDAYModelos.ipynb  N2_PrediccionFinal.ipynb  modelo_final.joblib  mystreamlit.py  predicciones.csv
Aprendizaje Automático/p2/: N1_Modelos.ipynb
Arquitectura de Computadores/parte 1/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  build.sh  config1.txt  config3.txt  config4.txt  ftest1.sh  ftest2.sh  ftest3.sh  ftest4.sh  scene2.txt  scene3.txt
Arquitectura de Computadores/parte 1/aos/: CMakeLists.txt
Arquitectura de Computadores/parte 1/aos/include/: image_aos.hpp  render_aos.hpp
Arquitectura de Computadores/parte 1/aos/src/: main.cpp  render_aos.cpp
Arquitectura de Computadores/parte 1/common/: CMakeLists.txt
Arquitectura de Computadores/parte 1/common/include/: camera.hpp  color.hpp  config.hpp  cylinder.hpp  material.hpp  object.hpp  ppm_writer.hpp  ray.hpp  scene.hpp  sphere.hpp  vector.hpp
Arquitectura de Computadores/parte 1/common/src/: config.cpp  cylinder.cpp  material.cpp  scene.cpp  sphere.cpp
Arquitectura de Computadores/parte 1/soa/: CMakeLists.txt
Arquitectura de Computadores/parte 1/soa/include/: image_soa.hpp  render_soa.hpp
Arquitectura de Computadores/parte 1/soa/src/: main.cpp  render_soa.cpp
Arquitectura de Computadores/parte 1/utaos/: CMakeLists.txt  test_image_aos.cpp  test_render_aos.cpp
Arquitectura de Computadores/parte 1/utcommon/: CMakeLists.txt  test_color.cpp  test_material.cpp  test_object.cpp  test_scene.cpp  test_vector.cpp
Arquitectura de Computadores/parte 1/utsoa/: CMakeLists.txt  test_image_soa.cpp  test_render_soa.cpp
Arquitectura de Computadores/parte 2/: CMakeLists.txt  config-fail.txt  config2.txt  (+11 more)
Criptografía y Seguridad/: 02_E2_run.txt  main.py
Procesadores de Lenguaje/: back.y  trad.y
Programación/: cangrejos.py  constantes.py  main.py  mario.py  monedas.py  moscas.py  tablero.py  tortugas.py
(+260 files in other folders)
